profile-packages-metadata/CustomObject/objects/PriceBook__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Price books</relationshipLabel>
        <relationshipName>Price_books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>15</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>new</fullName>
                </value>
                <value>
                    <fullName>sold</fullName>
                </value>
                <value>
                    <fullName>used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Price book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Price book Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>